# Portable_firmware_Avionics

./: .gitignore  BINARY_GENERATION_STATUS.md  BINARY_STRUCTURE_UPDATE_COMPLETE.md  CMakeLists.txt  README.md  UI_REALTIME_IMPLEMENTATION_COMPLETE.md  WIRELESS_ICONS_IMPLEMENTED.md  build_all.ps1  build_firmware.bat  build_firmware.sh  requirements.txt  server.py  start_server.bat  start_server.sh
build_ESP32/: CMakeCache.txt
build_ESP32_DEVKITV1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AeroFirmware.elf.vcxproj  AeroFirmware.elf.vcxproj.filters  AeroFirmware.sln  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  flash.vcxproj  flash.vcxproj.filters  flash_esp32.vcxproj  flash_esp32.vcxproj.filters
build_ESP32_DEV_MODULE/: CMakeCache.txt
build_ESP8266/: CMakeCache.txt
build_STM32F4/: CMakeCache.txt
build_STM32F7/: CMakeCache.txt
build_STM32H7/: CMakeCache.txt
build_STM32L0/: CMakeCache.txt
build_STM32L4/: CMakeCache.txt
config/: aero_config.h
core/app/: app_tasks.c  app_tasks.h  main.c
core/calibration/: sensor_cal.c  sensor_cal.h
core/control/: pid.c  pid.h  stabilization.c  stabilization.h
core/ekf/: aero_ekf.c  aero_ekf.h
core/protocol/: protocol_manager.c  protocol_manager.h
core/telemetry/: telemetry.c  telemetry.h
core/wireless/: wireless_manager.c  wireless_manager.h
hal/: hal_bt.c  hal_gps.c  hal_wifi.c
hal/esp32/: esp32_adc.c  esp32_bt.c  esp32_flash.c  esp32_gpio.c  esp32_gps.c  esp32_i2c.c  esp32_spi.c  esp32_timer.c  esp32_uart.c  esp32_wifi.c
hal/esp8266/: esp8266_bt.c  esp8266_gpio.c  esp8266_i2c.c  esp8266_spi.c  esp8266_timer.c  esp8266_uart.c  esp8266_wifi.c
hal/include/: hal_adc.h  hal_bt.h  hal_common.h  hal_flash.h  hal_gpio.h  hal_gps.h  hal_i2c.h  hal_spi.h  hal_timer.h  hal_uart.h  hal_wdt.h  hal_wifi.h
hal/stm32f4/: stm32f4_bt.c  stm32f4_gpio.c  stm32f4_timer.c  stm32f4_uart.c  stm32f4_wifi.c
hal/stm32f7/: stm32f7_bt.c  stm32f7_gpio.c  stm32f7_timer.c  stm32f7_uart.c  stm32f7_wifi.c
hal/stm32h7/: stm32h7_adc.c  stm32h7_bt.c  stm32h7_flash.c  stm32h7_gpio.c  stm32h7_i2c.c  stm32h7_spi.c  stm32h7_timer.c  stm32h7_uart.c  stm32h7_wifi.c
hal/stm32l0/: stm32l0_bt.c  stm32l0_gpio.c  stm32l0_timer.c  stm32l0_wifi.c
hal/stm32l4/: stm32l4_bt.c  stm32l4_gpio.c  stm32l4_timer.c  stm32l4_wifi.c
platform/: platform.h
platform/esp32/: esp32_dev_module_platform.c  esp32_platform.c  esp32c6_platform.c
platform/esp8266/: esp8266_platform.c
platform/stm32f4/: stm32f4_platform.c
platform/stm32f7/: stm32f7_platform.c
platform/stm32h7/: stm32h7_platform.c
platform/stm32l0/: stm32l0_platform.c
platform/stm32l4/: stm32l4_platform.c
rtos/: FreeRTOSConfig.h  freertos_hooks.c  rtos_tasks.c
rtos/include/: rtos_tasks.h
rtos/os_api/: os_api.h  os_api_freertos.c
sal/: sal_gps.c  sal_sensor.c
sal/drivers/lis2mdl/: lis2mdl.c  lis2mdl.h
sal/drivers/lps25hb/: lps25hb.c  lps25hb.h
sal/drivers/lsm6dsv/: lsm6dsv.c  lsm6dsv.h
sal/drivers/sht40/: sht40.c
sal/drivers/teseo_liv4f/: teseo_liv4f.c  teseo_liv4f.h
sal/drivers/tgs5141/: tgs5141.c  tgs5141.h
sal/include/: sal_gps.h  sal_sensor.h
tools/: uart_rx.py
tools/ide_stubs/: assert.h  cmsis_compiler.h  esp_err.h  esp_log.h  esp_partition.h  esp_system.h  math.h  nvs_flash.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  stm32f4xx.h  stm32f4xx_ll_flash.h  stm32f4xx_ll_pwr.h  stm32f4xx_ll_rcc.h  stm32f4xx_ll_utils.h  stm32h7xx.h  stm32h7xx_ll_bus.h  stm32h7xx_ll_cortex.h  stm32h7xx_ll_exti.h  stm32h7xx_ll_flash.h  stm32h7xx_ll_gpio.h  stm32h7xx_ll_iwdg.h  stm32h7xx_ll_pwr.h  stm32h7xx_ll_rcc.h  stm32h7xx_ll_spi.h  stm32h7xx_ll_system.h  stm32h7xx_ll_tim.h  stm32h7xx_ll_usart.h  stm32h7xx_ll_utils.h  stm32l0xx_ll_bus.h  stm32l0xx_ll_gpio.h  stm32l4xx.h  stm32l4xx_ll_bus.h  stm32l4xx_ll_gpio.h  stm32l4xx_ll_rcc.h  string.h
tools/ide_stubs/driver/: gpio.h  i2c.h  uart.h
tools/ide_stubs/freertos/: FreeRTOS.h  queue.h  semphr.h  task.h
tools/ide_stubs/hal/: gpio_types.h
ui/: app.js  index.html  style.css
